Add LLM report to v2.1

--- a/popup.html
+++ b/popup.html
@@ -155,6 +155,62 @@
           </button>
         </div>
 
+        <div class="recommendations-section">
+          <button
+            id="generate-recommendations-btn"
+            class="control-button recommendations-button"
+            type="button"
+            aria-describedby="recommendations-description"
+          >
+            <span
+              class="button-icon"
+              aria-hidden="true"
+              >🎯</span
+            >
+            <span class="button-text">Generate Recommendations</span>
+          </button>
+        </div>
+      </section>
+
+      <section
+        id="recommendations-display-section"
+        class="recommendations-display-section"
+        aria-label="Performance recommendations"
+        style="display: none"
+      >
+        <div class="recommendations-header">
+          <h2 class="recommendations-title">Performance Recommendations</h2>
+          <div class="recommendations-actions">
+            <button
+              id="copy-recommendations-btn"
+              class="control-button secondary copy-button"
+              type="button"
+              aria-describedby="copy-recommendations-description"
+            >
+              <span
+                class="button-icon"
+                aria-hidden="true"
+                >📋</span
+              >
+              <span class="button-text">Copy for LLM</span>
+            </button>
+          </div>
+        </div>
+
+        <div
+          id="recommendations-content"
+          class="recommendations-content"
+          role="region"
+          aria-label="Recommendations data"
+        >
+          <!-- Recommendations will be populated here -->
+        </div>
+      </section>
+
+      <section
+        id="controls-section-bottom"
+        aria-label="Extension controls"
+      >
         <div
           class="control-descriptions"
           aria-hidden="true"
@@ -176,6 +232,18 @@
             class="control-description"
           >
             Toggle visual highlighting of layout shift sources
+          </div>
+          <div
+            id="recommendations-description"
+            class="control-description"
+          >
+            Generate performance optimization recommendations for this page
+          </div>
+          <div
+            id="copy-recommendations-description"
+            class="control-description"
+          >
+            Copy LLM-ready analysis with instructions to clipboard
           </div>
         </div>
       </section>
